Added reusable components & Pages - Added Projects, skills,experience pages ,conatact js files -Created reusable component to redirect backpage & nextpage (flat icons) -Added react router paths

--- a/biodata/src/Pages/Home.css
+++ b/biodata/src/Pages/Home.css
@@ -22,3 +22,8 @@
   margin-bottom: 20px;
   padding-left: 20px;
 }
+.navigation-bar{
+    letter-spacing: 0.1rem;
+    background-color:floralwhite;
+    padding: 0.05rem;
+display: inline-block;}
