--- a/biodata/src/Pages/Home.css
+++ b/biodata/src/Pages/Home.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
 }
 .left-container{
     display: flex;
@@ -24,6 +24,19 @@
 }
 .navigation-bar{
     letter-spacing: 0.1rem;
-    background-color:floralwhite;
-    padding: 0.05rem;
-display: inline-block;}
+    background-color:rgb(220, 174, 83);
+    padding: 30px;
+    display: flex ;
+    margin: 5px 20px 5px 18px;
+    height: 10px;
+}
+.nav-content{
+  margin: 0px 100px 0px 100px;
+  font-weight: 700;
+  font-style:italic;
+}
+.btn-next{
+ margin: 20px 10px 10px 15px;
+ display: flex;
+ align-items: center;padding-left: 20px;
+}
